large_exp_results/mythril/0x16964d770439b1d2ae84ec96a18edb1657cffecf.sol/report
mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

/tmp/0x16964d770439b1d2ae84ec96a18edb1657cffecf.sol:188:1: SyntaxError: Source file requires different compiler version (current compiler is 0.4.23+commit.124ca40d.Linux.g++ - note that nightly builds are considered to be strictly less than the released version
pragma solidity ^0.4.24;
^----------------------^

SolidityVersionMismatch: Try adding the option "--solv 0.4.24"

